// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component - TaskCheckbox renders correctly when task is COMPLETED 1`] = `
<Checkbox
  checked={true}
  checkedIcon={
    <CheckCircle
      fontSize="default"
    />
  }
  color="primary"
  disableRipple={true}
  icon={
    <RadioButtonUnchecked
      fontSize="default"
    />
  }
  onChange={[Function]}
/>
`;

exports[`Component - TaskCheckbox renders correctly when task is UNCOMPLETED 1`] = `
<Checkbox
  checked={false}
  checkedIcon={
    <CheckCircle
      fontSize="default"
    />
  }
  color="primary"
  disableRipple={true}
  icon={
    <RadioButtonUnchecked
      fontSize="default"
    />
  }
  onChange={[Function]}
/>
`;
